# fastai_p2_nbs

./: README.md  main.py  pyproject.toml
